# libcontainer

./: .gitignore  CMakeLists.txt  README.md
include/: container_util.h
src/: container_util.cc
support/cmake/: libcontainer-config.cmake.in  libcontainer.pc.in
